[project]
name = 'pystackapi'
version = '0.3.0dev'
license = {file = 'LICENSE'}
description = 'PyStackAPI is a modern, 100% typed wrapper for the StackExchange API, written in Python.'
authors = [
    {name = 'Vladimir Chistov', email='wchistow@yandex.ru'},
]
requires-python = '>=3.10'
readme = 'README.md'
keywords = ['stackexchange', 'api-wrapper']
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3 :: Only',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Typing :: Typed',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules'
]
dependencies = [
    'chatexchange==0.0.4',
    'requests==2.32.2',
]

[project.urls]
'Homepage' = 'https://github.com/wchistow/pystackapi'
'Bug Tracker' = 'https://github.com/wchistow/pystackapi/issues'
'Repository' = 'https://github.com/wchistow/pystackapi.git'
